fix: assign z-index to dropdown
Fix #43

--- a/modules/dropdownSwitcher/styles.less
+++ b/modules/dropdownSwitcher/styles.less
@@ -75,6 +75,7 @@
     border-top: 0;
     background: @background-color-base;
     color: @color-subtle;
+    z-index: @z-index-dropdown;
 
     @media screen and (max-width: 720px) {
         font-size: inherit;
